# GeneralizedTicTacToe

./: CMakeLists.txt  README.md  main.cpp
Inc/: Board.h  Cleaner.h  Others.h  Parameters.h  Printer.h  States.h
Src/: Board.cpp  Cleaner.cpp  Others.cpp  Printer.cpp  States.cpp
